fix spacing in services section

--- a/src/css/components/_services.scss
+++ b/src/css/components/_services.scss
@@ -19,7 +19,7 @@
   }
 
   &__heading {
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     @include mq.tablet {
       margin-bottom: 40px;
     }
@@ -31,12 +31,9 @@
   &__header {
     font: fw.$bold 3.5rem ff.$rubik;
     text-align: center;
-    line-height: 2em;
+    line-height: func.getem(35, 70);
     @include mq.tablet {
-      font-size: 2.8rem;
-    }
-    @include mq.sp {
-      font-size: 2.2rem;
+      font-size: 3rem;
     }
   }
 
@@ -44,11 +41,9 @@
     font: fw.$regular 1.5rem ff.$opensans;
     color: color.$gray;
     text-align: center;
+    line-height: func.getem(15, 25);
     @include mq.tablet {
-      font-size: 1.3rem;
-    }
-    @include mq.sp {
-      font-size: 1.1rem;
+      font-size: 1.4rem;
     }
   }
 
@@ -59,7 +54,7 @@
     gap: 0 20px;
     @include mq.tablet {
       flex-wrap: wrap;
-      gap: 20px 3%;
+      gap: 30px 3%;
     }
     @include mq.sp {
       flex-direction: column;
@@ -72,7 +67,7 @@
     align-items: center;
     width: 30%;
     padding: 20px;
-    gap: 30px 0;
+    gap: 20px 0;
     box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8;
     cursor: pointer;
     transition: all 0.4s ease 0s;
@@ -114,10 +109,11 @@
   }
 
   &__title {
-    font: fw.$medium 2rem ff.$rubik;
+    font: fw.$semibold 2.5rem ff.$rubik;
     text-transform: uppercase;
+    text-align: center;
     @include mq.sp {
-      font-size: 1.6rem;
+      font-size: 2rem;
     }
   }
 
@@ -126,10 +122,10 @@
     font: fw.$regular 1.5rem ff.$rubik;
     color: color.$gray;
     text-align: center;
-    line-height: 1.5em;
+    line-height: func.getem(15, 25);
     white-space: wrap;
     @include mq.sp {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
     }
   }
 }
